--- a/src/commonmark/en/dhis2_chunked_template.html
+++ b/src/commonmark/en/dhis2_chunked_template.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <title>Chapter&nbsp;2.&nbsp;What is DHIS2?</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="resources/css/dhis2.css">
     <link id="homelink" rel="home" href="" title="">
     <link id="uplink" rel="up" href="" title="">
